fixed image location, added scrollbar to js

--- a/styles/sass/layout/_product-jumbotron.scss
+++ b/styles/sass/layout/_product-jumbotron.scss
@@ -1,7 +1,7 @@
 .product-jumbotron {
     height: 90vh;
     width: 100%;
-    background: url("../../../images/product-multi.png");
+    background: url("../../images/product-multi.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
